css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;

  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

*, *:before, *:after {
  box-sizing: inherit;
}

@media only screen and (min-width: 60em) {
 
    html {
        font-size:60%;
    }
}

@media only screen and (min-width: 90em) {
 
    html {
        font-size: 80%;
    }
}

@media only screen and (min-width: 120em) {
    
    html {
        font-size: 100%;
    }

}

body {
  
  margin: 0;
  padding: 0;
}
a:link,
a:active {
    outline: none;
}

.twilight {
    position: absolute;
    width:100%;
    height: 100vh;
    background-image: url(../images/twilight.svg);
    background-color: black;
}

.paint {
    position: absolute;
    width:90%;
    left: 50%;
    transform: translateX(-50%);
    height: 100vh;
    margin-top: 20px;
    margin-bottom: -50px;
    background-image: url(../images/paint_splat.svg);
    background-repeat: no-repeat;
}

.icon {
    position: absolute;
    left: 50%;
    top: -20vh;
    transform: translateX(-50%);
    height: 175px;
}

.intro {
    position: absolute;
    text-align: center;
    color: black;
    font-size: 30px;
    top: 30%;
    transform: translateY(-70%);
    left: 50%;
    transform: translateX(-50%);
}
    
.contact-1 {
    position: absolute;
    text-align: center;
}

.contact-2 {
    position: absolute;
    display: inline;
}

a {
    color: #3f5cff;
}

